feat: add web_accessible_resources to manifest for font loading
Add web_accessible_resources configuration to allow font files to be
loaded from src/fonts/ directory. Required for @font-face declarations
to work properly in Chrome Extension popup context.

Changes:
- Add web_accessible_resources array with fonts/* pattern
- Matches: ["<all_urls>"] for universal accessibility

--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,11 @@
     "16": "src/icons/icon16.png",
     "48": "src/icons/icon48.png",
     "128": "src/icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["src/fonts/*"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
