docs: update manifest description to include new break types

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Healthy Breaks",
   "version": "1.0.0",
-  "description": "Privacy-first health reminders for eye, water, walk, and posture breaks",
+  "description": "Privacy-first health reminders for eye, water, walk, posture, hand, mental, and breathing breaks",
   "permissions": [
     "alarms",
     "storage",
