build: add production build system and packaging
Production-ready packaging system:
- Added .gitignore to exclude dev files (node_modules, tests, etc.)
- Created build.sh script for automated production builds
- Production package includes only essential files:
  * manifest.json
  * src/ (popup.html, popup.js, background.js, tailwind.min.css)
  * src/icons/ (all icon sizes)
  * src/fonts/ (Inter font family)
  * README.md

Size comparison:
- Development: 43MB (includes node_modules, tests, etc.)
- Production: 818KB (compressed zip)
- Reduction: 98% smaller

To build: ./build.sh
To package: cd dist && zip -r ../healthy-breaks.zip .

All 10 tests passing ✓

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
+# Development dependencies
 node_modules/
-playwright-report/
+package.json
+package-lock.json
+
+# Testing files
+tests/
 test-results/
-.git/
+playwright-report/
+playwright.config.js
+
+# Build tools
+tailwind.config.js
+
+# Documentation (not needed for extension)
+docs/
+AGENTS.md
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
